# baro

./: .gitignore  ENHANCEMENTS  ENHANCEMENTS.md  INSTALL.md  LICENSE  README.md  REQUIREMENTS.md  STATUS.md  data_loader.py  main.py  pyproject.toml  run_bench.py  run_eval.py
.circleci/: config.yml
.github/workflows/: build-and-test.yml  python-package.yml  python-publish.yml
baro/: .root_cause_analysis.py.swp  __init__.py  _bocpd.py  anomaly_detection.py  reproducibility.py  root_cause_analysis.py  utility.py
docs/: running_time_and_instrumentation_cost.md
tests/: test.py
tutorials/: how-to-use-baro.ipynb  reproduce_multivariate_bocpd.ipynb  reproducibility.ipynb
